# podcast-transcripts

./: .env.example  .gitignore  README.md  pyproject.toml
metadata/episodes/: gooaye-ep600-metadata.json  gooaye-ep601-metadata.json  gooaye-ep602-metadata.json  gooaye-ep603-metadata.json  gooaye-ep604-metadata.json  gooaye-ep605-arigatouuu-metadata.json  gooaye-ep606-metadata.json  gooaye-ep607-metadata.json  gooaye-ep608-metadata.json  gooaye-ep609-metadata.json  gooaye-ep610-metadata.json  gooaye-ep611-metadata.json  (+45 more)
scripts/: process_episode.py  transcribe_rss_feed.py
summaries/: gooaye-ep600-summary.md  gooaye-ep601-summary.md  gooaye-ep602-summary.md  gooaye-ep603-summary.md  gooaye-ep604-summary.md  gooaye-ep605-summary.md  gooaye-ep606-summary.md  gooaye-ep607-summary.md  gooaye-ep608-summary.md  gooaye-ep609-summary.md  gooaye-ep610-summary.md  gooaye-ep611-summary.md  gooaye-ep612-summary.md  gooaye-ep613-summary.md  gooaye-ep614-summary.md  gooaye-ep615-summary.md  gooaye-ep616-summary.md  gooaye-ep617-summary.md  gooaye-ep618-summary.md  gooaye-ep619-summary.md  gooaye-ep620-summary.md  gooaye-ep621-summary.md  gooaye-ep622-summary.md  gooaye-ep623-summary.md  gooaye-ep624-summary.md  gooaye-ep625-summary.md  gooaye-ep626-summary.md  gooaye-ep627-summary.md  gooaye-ep628-summary.md  gooaye-ep629-summary.md  gooaye-ep630-summary.md  gooaye-ep631-summary.md  gooaye-ep632-summary.md  gooaye-ep633-summary.md  gooaye-ep634-summary.md  gooaye-ep635-summary.md  gooaye-ep636-summary.md  gooaye-ep637-summary.md  gooaye-ep638-summary.md  gooaye-ep639-summary.md  (+17 more)
(+227 files in other folders)
