[project]
name = "podcast-transcripts"
version = "0.1.0"
description = "Archive, review, and summarize podcast transcripts with uv-managed local tooling."
authors = [
    { name = "William Chou", email = "quant.william.chou@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "opencc-python-reimplemented>=0.1.7",
]


[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
